--- a/app/views/courses/_card.html.erb
+++ b/app/views/courses/_card.html.erb
@@ -1,7 +1,9 @@
 <hr>
 <strong>Name:</strong><%= course.name %><br/>
+<strong>Description:</strong><%= course.description %><br/>
 <strong>Duration:</strong><%= course.duration %><br/>
 <strong>Difficulty:</strong><%= course.difficulty %><br/>
-<strong>Owner:</strong><%= course.owner.instance_of?(User) ? "#{course.owner.profile.name} #{course.owner.profile.surname}" : course.owner.name %><br/>
+<strong>Visibility:</strong><%= course.visibility %><br/>
+<strong>Author:</strong><%= course.owner.instance_of?(User) ? "#{course.owner.profile.name} #{course.owner.profile.surname}" : course.owner.name %><br/>
 <br/>
 <%= link_to 'More', course_path(course), class: 'btn btn-md btn-primary' %>
