--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -6,12 +6,7 @@
 <p>Visibility: <%= @course.visibility %></p>
 <p>Author: <%= @course.owner.instance_of?(User) ? "#{@course.owner.profile.name} #{@course.owner.profile.surname}" : @course.owner.name %></p>
 
-<% unless !@participation.empty? %>
-    <%= link_to 'Enroll', create_participation_path(@course), method: :post, remote: true, class: 'btn btn-md btn-primary' %>
-<% else %>
-    <%= link_to 'Leave course', participation_path(@participation.first.id),
-                method: :delete, remote: :true, class: 'btn btn-md btn-danger' %>
-<% end %>
+<%= render partial: 'courses/enroll_button', locals: { course: @course, participation: @participation } %>
 
 <%= link_to 'Edit', edit_course_path(@course), class: 'btn btn-md btn-warning' if policy(@course).edit? %>
 <%= link_to 'Back', courses_path, class: 'btn btn-info btn-md' %>
