--- a/app/views/questions/_radio_question.html.erb
+++ b/app/views/questions/_radio_question.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @question do |f| %>
+<%= form_for @question, to: add_question_path do |f| %>
   <p><%= f.label :content, 'Set question:' %> <%= f.text_field :content %></p>
   <%= fields_for :answers do |m| %>
     <div class="answers"></div>
