Added InvitesController for organizations, changed Users::InviteController. Changed routes for invites..

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 
 <% if user_signed_in? %>
-  <%= link_to "Count of invite records #{current_user.invites.count}" , invites_path %>
+  <%= link_to "Count of invite records: #{current_user.invites.count}" , invites_user_path %>
   <%#= current_user.invite.organization_name %>
 <% end %>
 
