--- a/app/views/organizations/invites/index.html.erb
+++ b/app/views/organizations/invites/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row mx-3">
     <div class="col-lg-2">
-      <%= render partial: "organization_dashboard/menu", locals: { organization: @organization, active: :invites } %>
+      <%= render partial: 'organization_dashboard/menu', locals: { organization: @organization, active: :invites } %>
     </div>
     <div class="col-lg-10">
       <div class="tab-content" id="v-pills-tabContent">
@@ -9,6 +9,16 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col">
+                <h1>Invite user: </h1>
+                <%= simple_form_for :user, remote: true do |f| %>
+                  <%= f.input :email %>
+                  <%= f.button :submit, 'Invite' %>
+                <% end %>
+              </div>
+            </div>
+            <br/>
+            <div class="row">
+              <div id="invites-div" class="col">
                 <h1>All invites: </h1>
                 <% if @invites.empty? %>
                   <h4>No invites found.</h4>
