--- a/app/views/questions/_radio_question.html.erb
+++ b/app/views/questions/_radio_question.html.erb
@@ -3,6 +3,6 @@
     <p><%= f.label :content, 'Set question:' %> <%= f.text_field :content %></p>
     <div class="answers"></div>
     <p class="btn btn-outline-danger add-answer" type="radio" id="add-answer">Add answer</p>
-    <p><%= f.submit "Save question" %></p>
+    <p><%= f.submit "Add question" %></p>
   </div>
 <% end %>
