--- a/app/views/questions/_textbox_question.html.erb
+++ b/app/views/questions/_textbox_question.html.erb
@@ -4,5 +4,6 @@
     <input type="text" name="answer_list[answers][0]" value="this is a textbox question" style="display: none">
     <input type="text" name="answer_list[correct_answers][]" value="write the answer">
   </div>
+  <input name="question[question_type]" style="display: none" value="2">
   <p><%= f.submit "Save question" %></p>
 <% end %>
