--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -11,4 +11,7 @@
   <%= link_to 'Edit', edit_course_path(@course), class: 'btn btn-md btn-warning' if policy(@course).edit? %>
 <% end %>
 
+<% if current_user.admin? || @course.owner?(current_user) && !@course.published? %>
+    <%= link_to 'Publish', publish_course_path(@course), method: :patch, class: 'btn btn-md btn-primary course_publish' %>
+<% end %>
 <%= link_to 'Back', courses_path, class: 'btn btn-info btn-md' %>
