added ajax stub for add question form

--- a/app/views/questions/_textbox_question.html.erb
+++ b/app/views/questions/_textbox_question.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @question, to: add_question_path do |f| %>
+<%= form_for @question, to: add_question_path, remote: true do |f| %>
   <p><%= f.label :content, 'Set question:' %> <%= f.text_field :content %></p>
   <div class="answers">
     <input type="text" name="answer_list[answers][0]" value="this is a textbox question" style="display: none">
