--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -19,3 +19,7 @@
   <p>Log into your account to join this organization.</p>
 <% end %>
 <%= link_to 'Back', organizations_path, class: 'btn btn-info btn-md' %>
+<%= link_to 'Add users to organization', new_import_organization_path(@organization), 
+    remote: true, class: 'btn btn-md btn-info', id: 'csv-import' %>
+<div class='csv-import'>
+</div>
