--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -13,6 +13,7 @@
     <% if current_user.admin? || @course.owner?(current_user) && !@course.published? %>
       <%= link_to 'Publish', publish_course_path(@course), method: :patch, class: 'btn btn-md btn-primary course_publish' %>
     <% end %>
+    <%= link_to 'To pages', course_pages_path(course_id: @course.id), class: 'btn btn-info btn-md' %>
   <% end %>
 <% end %>
 <%= link_to 'Back', courses_path, class: 'btn btn-info btn-md' %>
