--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,5 +2,6 @@
 <% @pages.each do |page| %>
   <p>Page <%= @pages.index(page) + 1 %></p>
 <% end %>
+<%= link_to '+', course_new_page_path(@course), class: 'btn btn-primary btn-lg' %> <br />
 <br />
 <%= link_to 'Back', course_path(@course), class: 'btn btn-info btn-md' %> <br />
