--- a/app/views/application/_user-header.html.erb
+++ b/app/views/application/_user-header.html.erb
@@ -22,7 +22,7 @@
       </div>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Organization</a>
+      <%= link_to 'Organization', organizations_path, class: 'nav-link' %>
     </li>
   </ul>
 </div>
