--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Pages: </h1>
 <% @pages.each do |page| %>
-  <p>Page <%= @pages.index(page) + 1 %></p>
+  
+  <p><%= page.id %> Page <%= @pages.index(page) + 1 %></p>
 <% end %>
 <%= link_to '+', course_new_page_path(@course), class: 'btn btn-primary btn-lg' %> <br />
 <br />
