--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -4,9 +4,11 @@
 
   <%= f.input :html, label: 'HTML:' %>
 
+  <%= label_tag :page_index, "Page index:" %>
+  <%= number_field_tag :page_index, @course.pages.count + 1, min: 1, max: @course.pages.count + 1 %>
+
   <div class="form-actions">
     <%= f.button :submit, 'Create new page', class: 'btn btn-md btn-success' %>
     <%= link_to 'Back', course_pages_path, class: 'btn btn-info btn-md' %>
   </div>
 <% end %>
-
