--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -2,6 +2,19 @@
   <div class="text-center">
     <h1>Organization</h1>
   </div>
+  <div class="btn-group">
+    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Sort by
+    </button>
+    <div class="dropdown-menu">
+      <%= link_to 'Words A-Z' , organizations_path({keyword: 'wordsA'}), class: 'dropdown-item' %>
+      <%= link_to 'Words Z-A' , organizations_path({keyword: 'wordsZ'}), class: 'dropdown-item' %>
+      <%= link_to 'Courses' , organizations_path({keyword: 'course'}), class: 'dropdown-item' %>
+      <%= link_to 'Members' , organizations_path({keyword: 'members'}), class: 'dropdown-item' %>
+      <%= link_to 'Newest' , organizations_path({keyword: 'new'}), class: 'dropdown-item' %>
+      <%= link_to 'Oldest' , organizations_path({keyword: 'old'}), class: 'dropdown-item' %>
+    </div>
+  </div>
   <ul class="list-group list-group-flush my-5">
     <% @organizations.each do |org| %>
       <li class="list-group-item">
