Added page destruction.

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,11 @@
 <h1>Pages: </h1>
 <% @pages.each do |page| %>
   
-  <p><%= page.id %> Page <%= @pages.index(page) + 1 %></p>
+  <p>
+    <%= page.id %> Page <%= @pages.index(page) + 1 %> 
+    <%= link_to '-', course_page_destroy_path(id: page), method: :delete, class: 'btn btn-sm btn-danger', data: { confirm: 'Are you sure?' } %>
+  </p>
+  
 <% end %>
 <%= link_to '+', course_new_page_path(@course), class: 'btn btn-primary btn-lg' %> <br />
 <br />
