--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -8,6 +8,7 @@
         </div>
         <div class="form-actions">
           <%= form.submit %>
+          <%= link_to 'Back', pages_course_path(@course), class: 'btn btn-md btn-secondary' %>
         </div>
       <% end %>
     </div>
