Partly implemented #show action in PagesController. Added page memorizing with MemorizeLastVisitedPage interactor. Added navigational buttons to course pages. Added methods to Page model, declared some existing methods as private, added method for getting all remaining_pages with a single SQL query.

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -4,6 +4,14 @@
       <div class="content-wrapper">
         <%= render inline: @page.html %>
       </div>
+      <div class="navigation-buttons">
+        <% if @page.previous_page %>
+          <%= link_to 'Previous page', page_course_path(@course, @page.previous_page), class: 'btn btn-md btn-primary float-left' %>
+        <% end %>
+        <% if @page.next_page %>
+          <%= link_to 'Next page', page_course_path(@course, @page.next_page), class: 'btn btn-md btn-primary float-right' %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
