--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,11 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <h1>Pages: </h1>
 <% @pages.each do |page| %>
   
   <p>
-    <%= page.id %> Page <%= @pages.index(page) + 1 %> 
-    <%= link_to '-', course_page_destroy_path(id: page), method: :delete, class: 'btn btn-sm btn-danger', data: { confirm: 'Are you sure?' } %>
+    <%= page.id %> Page <%= @pages.index(page) + 1 %>   
+    <%= link_to "<i class='fa fa-close'></i>".html_safe, course_page_destroy_path(id: page), 
+        method: :delete, class: 'btn btn-md btn-danger', data: { confirm: 'Are you sure?' } %>
   </p>
   
 <% end %>
