--- a/app/views/organizations/invites/index.html.erb
+++ b/app/views/organizations/invites/index.html.erb
@@ -9,9 +9,30 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col">
+                <h1>Import users:</h1>
+                <%= simple_form_for :user, remote: true, url: import_organization_path(@organization), html: { multipart: true } do |f| %>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <%= f.input :email, label: 'Invite users via emails' %>
+                    </div>
+                    <div class="col-md-6">
+                      <%= label_tag 'user_csv', 'Import users from csv file' %>
+                      <%= file_field_tag 'user[csv]', id: 'user_csv', accepts: 'text/csv', class: 'form-control-file' %>
+                    </div>
+                  </div>
+                  <%= f.button :submit, 'Import' %>
+                <% end %>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
                 <h1>Invite user: </h1>
                 <%= simple_form_for :user, remote: true do |f| %>
-                  <%= f.input :email %>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <%= f.input :email, label: 'Invite users via emails' %>
+                    </div>
+                  </div>
                   <%= f.button :submit, 'Invite' %>
                 <% end %>
               </div>
