--- a/app/views/organizations/invites/index.html.erb
+++ b/app/views/organizations/invites/index.html.erb
@@ -13,7 +13,8 @@
                 <%= simple_form_for :user, remote: true, url: import_organization_path(@organization), html: { multipart: true } do |f| %>
                   <div class="row">
                     <div class="col-md-6">
-                      <%= f.input :email, label: 'Invite users via emails' %>
+                      <%= f.input :email, label:'Invite users via emails', collection: [],
+                                  input_html: { class: 'import-users-select', multiple: 'multiple' } %>
                     </div>
                     <div class="col-md-6">
                       <%= label_tag 'user_csv', 'Import users from csv file' %>
