--- a/app/views/organizations/invites/index.html.erb
+++ b/app/views/organizations/invites/index.html.erb
@@ -13,7 +13,7 @@
                 <%= simple_form_for :user, remote: true, url: import_organization_path(@organization), html: { multipart: true } do |f| %>
                   <div class="row">
                     <div class="col-md-6">
-                      <%= f.input :email, label: 'Invite users via emails', hint: 'Separate emails with space' %>
+                      <%= f.input :email, label: 'Invite users via emails', hint: 'Separate emails by pressing space' %>
                     </div>
                     <div class="col-md-6">
                       <%= label_tag 'user_csv', 'Import users from CSV file' %>
