--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,15 +1,7 @@
 <h1>
   Course "<%= @course.name %>"
   <% if user_signed_in? %>
-    <% if FavoriteCourse.find_by(course: @course, user: current_user) %>
-      <%= link_to remove_favorite_course_path(@course), method: :delete, class: 'btn btn-md btn-primary' do %>
-        <i class="fas fa-star"></i>
-      <% end %> 
-    <% else %>
-      <%= link_to add_favorite_course_path(@course), method: :post, class: 'btn btn-md btn-primary' do %>
-        <i class="far fa-star"></i>
-      <% end %> 
-    <% end %>    
+      <%= render partial: 'courses/favorite_button', locals: { course: @course, user: current_user } %>
   <% end %>
 </h1>
 
