--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -14,17 +14,37 @@
         <div class="h2">
           <%= link_to(new_course_path) do %>
           <i class="fas fa-plus"></i>
-          <% end %>
-        </div>
-      </div>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-md-3">
-        Filters
-      </div>
-      <div class="col-md-9">
-        Content
+        <% end %>
       </div>
     </div>
   </div>
+  <hr>
+  <div class="row">
+    <div class="col-md-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="text-center">Filters</h5>
+          <div class="form-group">
+            <div class="custom-control custom-checkbox mr-sm-2">
+              <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
+              <label class="custom-control-label" for="customControlAutosizing">Favorites</label>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="custom-control custom-checkbox mr-sm-2">
+              <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
+              <label class="custom-control-label" for="customControlAutosizing">My organization</label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-9">
+      <% @courses.each do |course| %>
+        <%= render 'courses/card', course: course %>
+      <% end %>
+      
+    </div>
+
+  </div>
+</div>
