Fixed params names.

--- a/app/views/courses/_favorite_button.html.erb
+++ b/app/views/courses/_favorite_button.html.erb
@@ -1,9 +1,9 @@
-<% if FavoriteCourse.find_by(course: @course, user: user) %>
-    <%= link_to remove_favorite_course_path(@course), method: :delete, remote: true, class: 'btn btn-md btn-primary remove-from-favorite' do %>
+<% if FavoriteCourse.find_by(course: course, user: user) %>
+    <%= link_to remove_favorite_course_path(course), method: :delete, remote: true, class: 'btn btn-md btn-primary remove-from-favorite' do %>
         <i class="fas fa-star"></i>
     <% end %> 
 <% else %>
-    <%= link_to add_favorite_course_path(@course), method: :post, remote: true, class: 'btn btn-md btn-primary add-to-favorite' do %>
+    <%= link_to add_favorite_course_path(course), method: :post, remote: true, class: 'btn btn-md btn-primary add-to-favorite' do %>
         <i class="far fa-star"></i>
     <% end %> 
 <% end %>  
