--- a/app/views/courses/_card.html.erb
+++ b/app/views/courses/_card.html.erb
@@ -11,13 +11,13 @@
         </p>
       </div>
       <div class="col-md-1">
-        <i class="fas fa-star">rate</i>
+        <i class="fas fa-star">10</i>
       </div>
       <div class="col-md-1">
         <i class="fas fa-user"><%= course.completion_records.count %></i>
       </div>
       <div class="col-md-2">
-        <button type="button" class="btn btn-primary">More</button>
+        <%= link_to 'More', course_path(course), class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
