--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,54 +1,60 @@
-<%#<h1>All courses: </h1>
-<%= link_to 'Create course', new_course_path, class: 'btn btn-md btn-primary'
-<% @courses.each do |course|
-  <%= render partial: 'courses/card', locals: {course: course }
-<% end %>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5"></div>
-      <div class="col-md-2">
-        <h1>Courses</h1>
-      </div>
-      <div class="col-md-3 my-1">
-        <div class="h2">
-          <%= link_to(new_course_path) do %>
-          <i class="fas fa-plus"></i>
-        <% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-5"></div>
+    <div class="col-md-2">
+      <h1>Courses</h1>
+    </div>
+    <div class="col-md-1 my-1">
+      <div class="h2">
+        <%= link_to(new_course_path) do %>
+        <i class="fas fa-plus"></i>
+      <% end %>
+    </div>
+  </div>
+  <div class="col-md-1 my-1">
+    <div class="h2">
+      <i class="fas fa-sort" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+      <div class="dropdown-menu">
+        <%= link_to 'Name', courses_path({keyword: 'name'}), class: 'dropdown-item' %>
+        <%= link_to 'Course graduates', courses_path({keyword: 'count'}), class: 'dropdown-item' %>
+        <%= link_to 'Rating', courses_path({keyword: 'rate'}), class: 'dropdown-item' %>
+        <%= link_to 'Newest', courses_path({keyword: 'new'}), class: 'dropdown-item' %>
+        <%= link_to 'Oldest', courses_path({keyword: 'old'}), class: 'dropdown-item' %>
       </div>
     </div>
   </div>
-  <hr>
-  <div class="row">
-    <div class="col-md-3">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="text-center">Filters</h5>
-          <div class="form-group">
-            <div class="custom-control custom-checkbox mr-sm-2">
-              <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
-              <label class="custom-control-label" for="customControlAutosizing">Favorites</label>
-            </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-md-3">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="text-center">Filters</h5>
+        <div class="form-group">
+          <div class="custom-control custom-checkbox mr-sm-2">
+            <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
+            <label class="custom-control-label" for="customControlAutosizing">Favorites</label>
           </div>
-          <div class="form-group">
-            <div class="custom-control custom-checkbox mr-sm-2">
-              <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
-              <label class="custom-control-label" for="customControlAutosizing">My organization</label>
-            </div>
+        </div>
+        <div class="form-group">
+          <div class="custom-control custom-checkbox mr-sm-2">
+            <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
+            <label class="custom-control-label" for="customControlAutosizing">My organization</label>
           </div>
         </div>
       </div>
     </div>
-    <div class="col-md-9">
-      <% @courses.each do |course| %>
-        <%= render 'courses/card', course: course %>
-      <% end %>
-    </div>
   </div>
-  <div class="row my-5">
-    <div class="col-md-5"></div>
-    <div class="col-md-6">
-      <%= will_paginate @courses, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
-    </div>
+  <div class="col-md-9">
+    <% @courses.each do |course| %>
+      <%= render 'courses/card', course: course %>
+    <% end %>
   </div>
+</div>
+<div class="row my-5">
+  <div class="col-md-5"></div>
+  <div class="col-md-6">
+    <%= will_paginate @courses, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
+  </div>
+</div>
 </div>
