Add filters on frontend

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,3 +7,8 @@
 @import "user_dashboard";
 @import "select2";
 @import "select2-bootstrap";
+@import "bootstrap-slider";
+
+.tooltip.in {
+  opacity: 1;
+}
