--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="container">
   <div class="row">
     <div class="col-md-5"></div>
@@ -12,16 +13,7 @@
     </div>
   </div>
   <div class="col-md-1 my-1">
-    <div class="h2">
-      <i class="fas fa-sort" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
-      <div class="dropdown-menu">
-        <%= link_to 'Name', courses_path({keyword: 'name'}), class: 'dropdown-item' %>
-        <%= link_to 'Course graduates', courses_path({keyword: 'count'}), class: 'dropdown-item' %>
-        <%= link_to 'Rating', courses_path({keyword: 'rate'}), class: 'dropdown-item' %>
-        <%= link_to 'Newest', courses_path({keyword: 'new'}), class: 'dropdown-item' %>
-        <%= link_to 'Oldest', courses_path({keyword: 'old'}), class: 'dropdown-item' %>
-      </div>
-    </div>
+    <%= render'courses/sort_menu' %>
   </div>
 </div>
 <hr>
@@ -31,16 +23,7 @@
       <div class="card-body">
         <h5 class="text-center">Filters</h5>
         <div class="form-group">
-          <div class="custom-control custom-checkbox mr-sm-2">
-            <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
-            <label class="custom-control-label" for="customControlAutosizing">Favorites</label>
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="custom-control custom-checkbox mr-sm-2">
-            <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
-            <label class="custom-control-label" for="customControlAutosizing">My organization</label>
-          </div>
+          <%= render 'courses/label_menu' %>
         </div>
       </div>
     </div>
