Added course image uploader.

--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -2,6 +2,8 @@
 <%= simple_form_for @course, url: course_path(@course), method: :patch, validate: true do |f| %>
   <%= f.error_notification %>
 
+  <%= image_tag @course.image.content.url if @course.image? %>
+  <%= f.input :image, label: 'Select image', as: :file %>
   <%= f.input :name, label: 'Course name', required: true, input_html: { autocomplete: 'name' } %>
   <%= f.input :description, label: 'Describe your course', required: true, input_html: { autocomplete: 'description'} %>
   <%= f.input :duration, label: 'Course duration', required: true, input_html: { min: '0' } %>
