--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,5 +1,6 @@
 <h1>Course "<%= @course.name %>"</h1>
 
+<%= image_tag @course.image.content.url if @course.image? %>
 <p>Description: <%= @course.description %></p>
 <p>Duration: <%= @course.duration %></p>
 <p>Difficulty: <%= @course.difficulty %></p>
