--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Organization "<%= @organization.name %>"</h1>
+<%= image_tag @organization.image.content.url if @organization.image? %>
 <p>Description: </p>
 <p><%= @organization.description %></p>
 <% if current_user %>
