--- a/app/views/questions/_checkbox_question.html.erb
+++ b/app/views/questions/_checkbox_question.html.erb
@@ -4,7 +4,6 @@
     <div class="answers"></div>
     <p class="btn btn-outline-danger add-answer" type="checkbox" id="add-answer">Add answer</p>
     <input name="question[question_type]" style="display: none" value="1">
-    <input name="question[page_id]" style="display: none" value="<%= page_id %>">
-    <p><%= f.submit "Add question" %></p>
+    <input name="question[page_id]" style="display: none" value="1">
   </div>
 <% end %>
