--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -22,7 +22,8 @@
           <%= link_to 'Back', pages_course_path(@course), class: 'btn btn-md btn-secondary' %>
         </div>
       <% end %>
-      <%= form_tag '/questions/add', method: :post, remote: true do %>
+      <div class="questions"></div>
+      <%= form_tag '/questions/add', method: :post, remote: true, id: 'render_form' do %>
         <%= submit_tag 'Create question', class: 'btn btn-md btn-primary' %>
       <% end %>
     </div>
