--- a/app/views/questions/_checkbox_question.html.erb
+++ b/app/views/questions/_checkbox_question.html.erb
@@ -5,5 +5,6 @@
     <p class="btn btn-outline-danger add-answer" type="checkbox" id="add-answer">Add answer</p>
     <input name="question[question_type]" style="display: none" value="1">
     <input name="question[page_id]" style="display: none" value="1">
+    <input id="index" style="display: none" value="0">
   </div>
 <% end %>
