Added rails_admin to provide admin dashboard functionality. Changed confliction font awesome's revision, fixed disappearing icons. Added routes for admin dashboard.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "jquery-ui";
-@import "font-awesome-sprockets";
-@import "font-awesome";
+//@import "font-awesome-sprockets";
+//@import "font-awesome";
+@import 'font_awesome5.css';
 @import "bootstrap";
 @import "application/application";
 @import "application/footer";
