added buttons for each type of questions

--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -23,9 +23,7 @@
           <%= link_to 'Back', pages_course_path(@course), class: 'btn btn-md btn-secondary' %>
         </div>
       <% end %>
-      <%= form_tag '/questions/add', method: :post, remote: true, id: 'render_form' do %>
-        <%= submit_tag 'Create question', class: 'btn btn-md btn-primary' %>
-      <% end %>
+        <%= render partial: 'add_question' %>
     </div>
   </div>
 </div>
