--- a/app/views/courses/_label_menu.html.erb
+++ b/app/views/courses/_label_menu.html.erb
@@ -1,18 +1,15 @@
-<%= form_tag(controller: 'courses', action: 'filter', method: 'post', remote: true) do %>
+<%= form_tag(controller: 'courses', action: 'filter', method: 'post', remote: :true) do %>
   <%= label_tag(:rate, "Rating") %>
   <%= text_area_tag(:rate) %>
   <br>
   <%= label_tag(:count, "Count of completed:") %>
   <%= text_area_tag(:count) %>
   <br>
-  <%= check_box_tag(:favorites, class: 'custom-control-label') %>
+  <%= check_box_tag(:favorites) %>
   <%= label_tag(:favorites, "Favorites") %>
   <br>
   <%= check_box_tag(:myorg) %>
   <%= label_tag(:myorg, "My organization") %>
-  <div class="text-center">
-    <%= submit_tag "Submin", class: "btn btn-outline-success" %>
-  </div>
 <% end %>
 
 <script>
