--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,15 @@
-
+<script>
+  $(document).ready(function(){
+    $("#asd").click(function(){
+      $.ajax({
+        url: '/courses/sortable.js',
+        type: 'get',
+        data: type,
+        dataType: "js"
+      })
+    })
+  })
+</script>
 <div class="container">
   <div class="row">
     <div class="col-md-5"></div>
@@ -28,10 +39,8 @@
       </div>
     </div>
   </div>
-  <div class="col-md-9">
-    <% @courses.each do |course| %>
-      <%= render 'courses/card', course: course %>
-    <% end %>
+  <div class="col-md-9" id="course-list">
+    <%= render 'courses/card', courses: @courses %>
   </div>
 </div>
 <div class="row my-5">
