--- a/app/views/courses/_sort_menu.html.erb
+++ b/app/views/courses/_sort_menu.html.erb
@@ -1,7 +1,7 @@
 <div class="h2">
   <i class="fas fa-sort" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
   <div class="dropdown-menu" id="sort-menu">
-    <%= link_to 'Name', courses_sortable_path({keyword: 'name'}), class: 'dropdown-item', remote: true, id: 'asd' %>
+    <%= link_to 'Name', courses_sortable_path({keyword: 'name'}), class: 'dropdown-item', remote: true %>
     <%= link_to 'Course graduates', courses_sortable_path({keyword: 'count'}), remote: true, class: 'dropdown-item' %>
     <%= link_to 'Rating', courses_sortable_path({keyword: 'rate'}), remote: true, class: 'dropdown-item' %>
     <%= link_to 'Newest', courses_sortable_path({keyword: 'new'}), remote: true, class: 'dropdown-item' %>
