--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,13 +2,21 @@
   $(document).ready(function(){
     $("#asd").click(function(){
       $.ajax({
-        url: '/courses/sortable.js',
+        url: '/course/sortable',
         type: 'get',
         data: type,
         dataType: "js"
       })
+    });
+    $("#myorg").change(function(){
+      $.ajax({
+        url: '/course/sortable',
+        type: 'get',
+        data: {keyword: 'myorg'},
+        dataType: "js"
+      })
     })
-  })
+  });
 </script>
 <div class="container">
   <div class="row">
