--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,12 +1,22 @@
+<script>
+  $(document).ready(function(){
+    $(".dropdown-item").click(function(){
+      $.ajax({
+        url: "<%= organizations_sortable_path %>",
+        type: get,
+        data: type,
+        dataType: js
+      })
+    })
+  })
+</script>
 <div class="container">
   <div class="text-center">
     <h1>Organization</h1>
   </div>
   <%= render 'organizations/sort_list' %>
-  <ul class="list-group list-group-flush my-5">
-    <% @organizations.each do |org| %>
-      <%= render 'organizations/organization_list_unit', organization: org %>
-    <% end %>
+  <ul class="list-group list-group-flush my-5" id="organization-list">
+    <%= render 'organizations/card'%>
   </ul>
   <%= render 'organizations/pagination', collection: @organizations %>
 </div>
