--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -7,7 +7,7 @@
   <%= f.input :description, label: 'Describe your course', required: true, input_html: { autocomplete: 'description'} %>
   <%= f.input :duration, label: 'Course duration', required: true, input_html: { min: '0' } %>
   <%= f.input :difficulty, label: 'Difficulty', collection: Course.difficulties.keys, include_blank: false %>
-  <%= f.input :visibility, label: 'Visibile for: ', collection: Course.visibilities.except('organizatio1n').keys, 
+  <%= f.input :visibility, label: 'Visibile for: ', collection: Course.visibilities.except('organization').keys, 
                 include_blank: false, input_html: { id: 'course_visibility' } %>
   <div class='course_allowed_users_selector_div d-none'>
     <%= f.input :allowed_users, label:'Select allowed users', collection: @users, disabled: true,
